Fixing the footer columns on IE LT 9 so they actually render as columns.

--- a/sass/lt-ie9.scss
+++ b/sass/lt-ie9.scss
@@ -28,9 +28,18 @@
 @include widest{
 	.lt-ie9{
 		#page{
+			#band{	
+			}
+		}
+		#footer{
 			//background-color:cyan;
-			#band{
-				
+			#footer-middle{
+				.region-footer-menus{
+					.block{
+						width:19%;
+						float:left;
+					}
+				}
 			}
 		}
 	}
